fixed homepage section spacing

--- a/css/main.css
+++ b/css/main.css
@@ -165,8 +165,7 @@
   /* ---------- S E C T I O N S ----------- */
   section {
     width: 88%;
-    margin: 3% 6%;
-    /* margin-bottom: %; */
+    margin: 5% 6%;
   }
 
   .hero-section {
@@ -306,10 +305,10 @@
   }
   
   h1 {
-    font-size: 12em;
+    font-size: 13em;
     font-weight: 900;
-    line-height: 1.3;
-    margin: 0.4em 0;
+    line-height: 1.4;
+    margin: 0.3em 0;
     position: relative;
     z-index: 3;
   }
@@ -321,15 +320,16 @@
   }
   
   h1 span:hover {
-    color:#d67070;
+    color:#DB6468;
     transition: color 0.2s;
-    text-decoration: underline solid #d67070 3px;
+    text-decoration: underline solid #DB6468 3px;
     z-index: 3;
   }
   
   @media only screen and (min-width: 1366px) {
     h1 {
-      margin-left: 14%;
+      margin-left: 3%;
+      
     }
   }
   
@@ -751,7 +751,7 @@ footer {
   background-color: var(--mulberry_08);
   opacity: 0.8;
   width: 110%;
-  margin-top: 5%;
+  margin-top: 3%;
 }
 
 footer p {
@@ -899,10 +899,6 @@ p span a:active {
   
    
   /*------------ PROJECTS PAGE -----------*/
-  .project-section {
-    margin: 0.5% 6%;
-  }
-
   .project-section h2 {
     justify-content: center;
   }
